--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -139,7 +139,59 @@ img.unformat {
 	box-shadow: none;
 }
 
+span.legenda {
+	font-size: 0.7em !important;
+	word-break: break-all !important;
+	word-wrap: break-word !important;
+}
 
+p.legenda {
+	font-size: 0.7em !important;
+	word-break: break-all !important;
+	word-wrap: break-word !important;
+	margin-top: -3vh;
+}
+
+span.legenda.center {
+	font-size: 0.7em !important;
+	word-break: break-all !important;
+	word-wrap: break-word !important;
+	text-align: center !important;
+}
+
+p.legenda.center {
+	font-size: 0.7em !important;
+	word-break: break-all !important;
+	word-wrap: break-word !important;
+	text-align: center !important;
+}
+
+div.destaque {
+	background-color: #fff;
+	border-radius: 6px;
+	padding: 40px;
+	color: #333;
+	margin-top: 40px;
+	margin-bottom: 40px;
+	border: 4px solid #ccc;
+	opacity: 1;
+}
+
+div.destaque blockquote {
+	color: #333;
+	opacity: 1;
+}
+
+div.destaque p, div.destaque h3, div.destaque h4, div.destaque h5, div.destaque h6 {
+	color: #333;
+	opacity: 1;
+}
+
+
+div.destaque blockquote p{
+	color: #333;
+	opacity: 1;
+}
 
 div.video {
 	text-align: center;
@@ -155,6 +207,8 @@ div.video iframe {
 
 div.img {
 	text-align: center;
+	margin-top: 40px;
+	margin-bottom: 40px;
 }
 
 div.img img {
